apps/media/app.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-kura-depl-c87ca1a6
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: media-kura-depl-c8fdf1b6
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: media-kura-depl-c8fdf1b6
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - roxy
      automountServiceAccountToken: false
      containers:
        - env:
            - name: KURA_LIBRARY_ROOT
              value: /anime/series
            - name: KURA_INBOX_ROOT
              value: /anime/downloads
            - name: KURA_DISABLE_TOKEN
              value: "1"
            - name: KURA_HOST_ID
              value: k2-media-kura
            - name: KURA_PREFERRED_LANGUAGES
              value: ja
            - name: KURA_TVDB_KEY
              valueFrom:
                secretKeyRef:
                  key: credential
                  name: media-kura-depl-tvdb-c80846d7
            - name: TZ
              value: America/Los_Angeles
          image: ghcr.io/wyvernzora/kura:dev
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 8080
              scheme: HTTP
          name: main
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: mcp
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 8080
              scheme: HTTP
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 2Gi
              memory: 2048Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /anime
              name: blk-vol-anime
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 2001
        fsGroupChangePolicy: Always
        runAsGroup: 2001
        runAsNonRoot: true
        runAsUser: 3000
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: blk-vol-anime
          nfs:
            path: /mnt/data/media/anime
            server: 10.10.8.1
---
apiVersion: v1
kind: Service
metadata:
  name: kura
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: media-kura-depl-c8fdf1b6
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kura-mcp
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8081
  selector:
    cdk8s.io/metadata.addr: media-kura-depl-c8fdf1b6
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-authelia@kubernetescrd
  name: media-kura-ingress-c8d306aa
spec:
  rules:
    - host: kura.wyvernzora.io
      http:
        paths:
          - backend:
              service:
                name: kura
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-kavita-depl-c89cc182
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: media-kavita-depl-c8d9faa4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: media-kavita-depl-c8d9faa4
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - roxy
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "3000"
            - name: PGID
              value: "2001"
            - name: TZ
              value: America/Los_Angeles
          image: linuxserver/kavita:0.8.9
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
          name: kavita
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
          resources:
            limits:
              cpu: 2000m
              ephemeral-storage: 10Gi
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /config
              name: pvc-media-kavita-depl-vol-appdata-pvc-c8a8ac1e
            - mountPath: /library
              name: blk-vol-library
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-media-kavita-depl-vol-appdata-pvc-c8a8ac1e
          persistentVolumeClaim:
            claimName: media-kavita-depl-vol-appdata-pvc-c8a8ac1e
            readOnly: false
        - name: blk-vol-library
          nfs:
            path: /mnt/data/media/manga/library
            server: 10.10.8.1
---
apiVersion: v1
kind: Service
metadata:
  name: kavita
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 5000
  selector:
    cdk8s.io/metadata.addr: media-kavita-depl-c8d9faa4
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-authelia@kubernetescrd
  name: media-kavita-ingress-c8169fbf
spec:
  rules:
    - host: media.wyvernzora.io
      http:
        paths:
          - backend:
              service:
                name: kavita
                port:
                  number: 80
            path: /kavita
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-dmhy-mcp-depl-c897beea
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: media-dmhy-mcp-depl-c864e3e9
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: media-dmhy-mcp-depl-c864e3e9
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/wyvernzora/dmhy-mcp:dev
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          name: main
          ports:
            - containerPort: 8080
              name: mcp
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: dmhy-mcp
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: media-dmhy-mcp-depl-c864e3e9
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-qbit-depl-c81776b5
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: media-qbit-depl-c8bfd928
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: media-qbit-depl-c8bfd928
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - roxy
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - roxy
      automountServiceAccountToken: false
      containers:
        - env:
            - name: PUID
              value: "3000"
            - name: PGID
              value: "2001"
            - name: TZ
              value: America/Los_Angeles
            - name: WEBUI_PORTS
              value: 8080/tcp
          image: lscr.io/linuxserver/qbittorrent:4.6.7
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - wget
                - -qO
                - /dev/null
                - http://127.0.0.1:8080
            failureThreshold: 3
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            exec:
              command:
                - wget
                - -qO
                - /dev/null
                - http://127.0.0.1:8080
            failureThreshold: 3
          resources:
            limits:
              cpu: 1000m
              ephemeral-storage: 8Gi
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /downloads/default
              name: blk-vol-default
            - mountPath: /downloads/anime
              name: blk-vol-anime
            - mountPath: /config
              name: pvc-media-qbit-depl-vol-appdata-pvc-c865d717
              subPath: qbittorrent
        - env:
            - name: FLOOD_OPTION_AUTH
              value: none
            - name: FLOOD_OPTION_QBURL
              value: http://127.0.0.1:8080
            - name: FLOOD_OPTION_QBUSER
              value: dummy
            - name: FLOOD_OPTION_QBPASS
              value: dummy
            - name: FLOOD_OPTION_RUNDIR
              value: /config
            - name: FLOOD_OPTION_ALLOWEDPATH
              value: /downloads
          image: jesec/flood:4.14.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          name: floodui
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          resources:
            limits:
              cpu: 1500m
              memory: 2048Mi
            requests:
              cpu: 1000m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 2001
            runAsNonRoot: true
            runAsUser: 3000
          volumeMounts:
            - mountPath: /downloads/default
              name: blk-vol-default
            - mountPath: /downloads/anime
              name: blk-vol-anime
            - mountPath: /config
              name: pvc-media-qbit-depl-vol-appdata-pvc-c865d717
              subPath: flood
        - args:
            - --transport=http
            - --addr=:8082
          image: ghcr.io/wyvernzora/qbittorrent-mcp:dev
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
          name: qbit-mcp
          ports:
            - containerPort: 8082
              name: mcp
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8082
              scheme: HTTP
          resources:
            limits:
              cpu: 500m
              ephemeral-storage: 1Gi
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: blk-vol-default
          nfs:
            path: /mnt/data/downloads
            server: 10.10.8.1
        - name: blk-vol-anime
          nfs:
            path: /mnt/data/media/anime
            server: 10.10.8.1
        - name: pvc-media-qbit-depl-vol-appdata-pvc-c865d717
          persistentVolumeClaim:
            claimName: media-qbit-depl-vol-appdata-pvc-c865d717
            readOnly: false
        - configMap:
            name: media-qbit-depl-cm-init-c82356b0
          name: configmap-media-qbit-depl-cm-init-c82356b0
---
apiVersion: v1
kind: Service
metadata:
  name: flood
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: media-qbit-depl-c8bfd928
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8080
  selector:
    cdk8s.io/metadata.addr: media-qbit-depl-c8bfd928
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-mcp
spec:
  externalIPs: []
  ports:
    - port: 80
      targetPort: 8082
  selector:
    cdk8s.io/metadata.addr: media-qbit-depl-c8bfd928
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-authelia@kubernetescrd
  name: media-qbit-ingr-c86a809e
spec:
  rules:
    - host: dl.wyvernzora.io
      http:
        paths:
          - backend:
              service:
                name: flood
                port:
                  number: 80
            path: /
            pathType: Prefix
